--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
+.first-section {
+    background-color: #1F2937;
+}
+
 .header {
     display: flex;
     justify-content: space-around;
     padding: 16px 0;
-    background-color: #1F2937;
 }
 
 .logo {
@@ -35,5 +39,45 @@ a {
 
 .intro {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin: 60px 130px;
+} 
+.left {
+    display: flex;
+    width: 460px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 12px;
+}
+
+.left-title {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: bolder;
+}
+.left-subtext {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+img {
+    width: 350px;
+}
+.sign-up {
+    background-color: #3882fb;
+    padding: 6px 32px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.placeholder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: grey;
+    color: #E5E7EB;
+    height: 220.80px;
+    width: 540px;
 }
