--- a/style.css
+++ b/style.css
@@ -81,3 +81,51 @@ img {
     height: 220.80px;
     width: 540px;
 }
+
+.second-section {
+    display: flex;
+    flex-direction: column;
+    margin: 60px 0;
+}
+
+.second-title {
+    text-align: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: bolder;
+    margin-bottom: 60px;
+}
+
+.cards{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 150px;
+}
+
+.card {
+    width: 150px;
+    height: 150px;
+    border: solid 4px #3882fb;
+    border-radius: 16px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    max-width: 160px;
+    text-align: center;
+}
+.quote {
+    background-color: #E5E7EB;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1F2937;
+    max-width: 51%;
+}
